<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context="com.ispolska.myapplication.ui.AuthActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGreeting"
        style="@style/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_main"
        android:text="@string/greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFillFormProposal"
        style="@style/text_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/fill_form_proposal"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        style="@style/text_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_middle"
        android:text="@string/email_placeholder"
        android:textColor="@color/color_text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFillFormProposal"
        tools:ignore="VisualLintOverlap" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/til_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFillFormProposal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/et_style"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/margin_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        style="@style/text_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_middle"
        android:text="@string/password_placeholder"
        android:textColor="@color/color_text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        tools:ignore="VisualLintOverlap" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/til_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/color_secondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginEnd="@dimen/margin_end"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/chkRemember"
        style="@style/chk_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_middle"
        android:checked="true"
        android:text="@string/remember_me_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clBtnGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn_google"
        android:layout_marginTop="@dimen/marginTopClBtnGoogle"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/btn_Google_margin_bottom"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkRemember"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOr"
        style="@style/text_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/or"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clBtnGoogle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        style="@style/text_button_caps"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_btn_register"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/btn_register_margin_bottom"
        android:background="@drawable/register_button"
        android:text="@string/register_button"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTerms"
        style="@style/text_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/terms_agreement"
        android:textAlignment="center"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintBottom_toTopOf="@id/tvHaveAccQuestion"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHaveAccQuestion"
        style="@style/text_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/have_acc_question"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintEnd_toStartOf="@id/tvSignIn"
        app:layout_constraintStart_toStartOf="@id/tvTerms"
        app:layout_constraintTop_toBottomOf="@id/tvTerms"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignIn"
        style="@style/text_middle"
        android:layout_width="@dimen/tvSignInWidth"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@id/tvHaveAccQuestion"
        app:layout_constraintEnd_toEndOf="@id/tvTerms"
        app:layout_constraintTop_toTopOf="@id/tvHaveAccQuestion" />

</androidx.constraintlayout.widget.ConstraintLayout>