<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vTopHalfBackground"
        android:layout_width="0dp"
        android:layout_height="@dimen/vTopHalfBackgroundHeight"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/vBottomHalfBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSettings"
            style="@style/text_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_middle"
            android:layout_marginTop="@dimen/margin_middle"
            android:text="@string/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_marginTop="@dimen/margin_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSettings"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:srcCompat="@drawable/baseline_person_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFullName"
            style="@style/text_big"
            android:textColor="?attr/colorOnPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/name_lastname_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCareer"
            style="@style/text_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/career_placeholder"
            android:textColor="@color/color_text_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFullName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddress"
            style="@style/text_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_middle"
            android:text="@string/home_address_placeholder"
            android:textColor="@color/color_text_secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCareer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vBottomHalfBackground"
        android:layout_width="0dp"
        android:layout_height="@dimen/vBottomHalfBackgroundHeight"
        android:background="?attr/colorTertiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vTopHalfBackground" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="62dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_link_facebook" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLinkedin"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_link_linkedin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivInstagram"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_link_instagram" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditProfile"
            style="@style/text_middle"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_btn_register"
            android:layout_margin="@dimen/margin_middle"
            android:background="@drawable/btn_edit_profile"
            android:text="@string/edit_profile_button"
            android:textAllCaps="false"
            android:textColor="@color/color_text_additional"
            app:layout_constraintBottom_toTopOf="@id/btnViewContacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnViewContacts"
            style="@style/text_button"
            android:textColor="?attr/colorControlActivated"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn_register"
            android:layout_margin="@dimen/margin_middle"
            android:background="@drawable/btn_view_contacts"
            android:text="@string/view_contacts_button"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

